<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:gpb="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBlack"
    android:weightSum="10">
    <com.chabbal.slidingdotsplash.SlidingSplashView
        android:id="@+id/splashLogin"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="top" />

    <LinearLayout
        android:id="@+id/bodyLogin"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="bottom"
        android:background="@drawable/custom_border_login"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/oswald"
            android:text="@string/welcome_back"
            android:textColor="@color/colorBlack"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size5dp"
            android:text="@string/title_login"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin30"
            android:layout_marginTop="@dimen/margin30"
            android:layout_marginRight="@dimen/margin30"
            android:background="@drawable/custom_edittext_round"
            android:hint="@string/email" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin30"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/margin30"
            android:background="@drawable/custom_edittext_round"
            android:hint="@string/password" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin30"
            android:background="@drawable/custom_round_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/forgot_your_password"
            android:textSize="@dimen/text_size_15" />

        <LinearLayout
            android:id="@+id/signUpNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:gravity="center">

            <TextView
                android:id="@+id/noAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_have_an_account"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size5dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorOrange"
                android:textSize="@dimen/text_size_15"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
    <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
        android:id="@+id/google_progress"
        android:visibility="gone"
        android:background="@drawable/round_icon_cart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        gpb:type="nexus_rotation_cross"/>

</FrameLayout>
