<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:gpb="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
            android:id="@+id/progress_register"
            android:background="@drawable/round_icon_cart"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            android:gravity="center"
            android:layout_gravity="center"
            gpb:type="nexus_rotation_cross"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            tools:context=".src.module.register.view.RegisterActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarRegister"
                app:navigationIcon="@drawable/ic_keyboard_backspace_24dp"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"/>

            <TextView
                android:text="@string/create_an_account"
                android:textSize="30sp"
                android:fontFamily="@font/oswald"
                android:layout_marginTop="@dimen/margin30"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailRegister"
                android:background="@drawable/custom_edittext_round"
                android:layout_marginTop="@dimen/margin30"
                android:layout_marginLeft="@dimen/margin30"
                android:layout_marginRight="@dimen/margin30"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserNameRegister"
                android:background="@drawable/custom_edittext_round"
                android:layout_marginTop="@dimen/margin30"
                android:layout_marginLeft="@dimen/margin30"
                android:layout_marginRight="@dimen/margin30"
                android:hint="@string/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPhoneRegister"
                android:inputType="phone"
                android:background="@drawable/custom_edittext_round"
                android:layout_marginTop="@dimen/margin30"
                android:layout_marginLeft="@dimen/margin30"
                android:layout_marginRight="@dimen/margin30"
                android:hint="@string/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordRegister"
                android:background="@drawable/custom_edittext_round"
                android:layout_marginTop="@dimen/margin30"
                android:layout_marginLeft="@dimen/margin30"
                android:layout_marginRight="@dimen/margin30"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnRegister"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:text="@string/sign_up"
                android:textSize="@dimen/text_size_20"
                android:layout_margin="@dimen/margin30"
                android:background="@drawable/custom_round_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </FrameLayout>

</androidx.core.widget.NestedScrollView>
