<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:gpb="http://schemas.android.com/apk/res-auto"
    tools:context=".src.module.favourite.view.FavouriteFragment">
    <LinearLayout
        android:id="@+id/layoutFavouriteEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_icon_cart"
            android:padding="@dimen/margin50"
            android:src="@drawable/ic_heart_checked"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald"
            android:gravity="center"
            android:text="@string/favourite_empty"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_30" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFavourite"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin20"
            android:fontFamily="@font/oswald"
            android:text="@string/favourite"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/text_size_50" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFavourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10" />


    </LinearLayout>

    <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
        android:id="@+id/progress_favourite"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/round_icon_cart"
        android:visibility="visible"
        gpb:type="nexus_rotation_cross" />
</LinearLayout>