<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_menu_res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="#54000000"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.chabbal.slidingdotsplash.SlidingSplashView
                    android:id="@+id/splashExplore"

                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                </com.chabbal.slidingdotsplash.SlidingSplashView>

            </FrameLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarMenuRes"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#39000000"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:title="@string/vn_food">


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollMenuFoodRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10"
                android:background="@drawable/custom_edittext_round"
                android:drawableStart="@drawable/ic_search_24dp"
                android:hint="@string/search" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:fontFamily="@font/oswald"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/new_food"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_40" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerNewFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:fontFamily="@font/oswald"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/hot_food"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_40" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerHotFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

