<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin20"
            android:fontFamily="@font/oswald"
            android:text="@string/change_password"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/text_size_30" />
        <TextView
            android:id="@+id/txtCloseDialogChangePassword"
            android:layout_gravity="center"
            android:gravity="right"
            android:layout_marginRight="@dimen/margin10"
            android:drawableRight="@drawable/ic_clear_black_24dp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/margin30"
        android:layout_marginTop="@dimen/margin30"
        android:layout_marginRight="@dimen/margin30"
        android:background="@drawable/custom_edittext_round"
        android:hint="@string/old_password" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin30"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:layout_marginRight="@dimen/margin30"
        android:background="@drawable/custom_edittext_round"
        android:hint="@string/new_password" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtNewPasswordAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin30"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:layout_marginRight="@dimen/margin30"
        android:background="@drawable/custom_edittext_round"
        android:hint="@string/new_password" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin30"
        android:background="@drawable/custom_round_button"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_20" />

</LinearLayout>